--- a/final_project/diy_tips.html
+++ b/final_project/diy_tips.html
@@ -7,7 +7,7 @@
     <meta name="title" content="Clean Sweep | Blog - DIY Tips & Success Stories">
     <meta name="Description" content="Share and read DIY cleaning tips and success stories from our community to keep your home sparkling clean.">
     <title>Clean Sweep | A Home Cleaning Service</title>
-    <script defer src="scripts/clean_sweep.js"></script>
+    
     <link rel="stylesheet" href="styles/clean_sweep.css">
     <link rel="stylesheet" href="styles/clean_sweep_large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -95,5 +95,8 @@
         </div>
     </footer>
     
+    <script defer src="scripts/clean_sweep.js"></script>
+    <script defer src="scripts/navigation.js"></script>
+
 </body>
 </html>
