--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -74,5 +74,6 @@
     
     <script defer src="scripts/clean_sweep.js"></script>
     <script defer src="scripts/gallery.js"></script>
+    <script defer src="scripts/navigation.js"></script>
 </body>
 </html>
