--- a/final_project/index.html
+++ b/final_project/index.html
@@ -7,7 +7,7 @@
     <meta name="title" content="Clean Sweep | A Home Cleaning Service">
     <meta name="Description" content="Clean Sweep is a Cleaning Service for all your household needs">
     <title>Clean Sweep | A Home Cleaning Service</title>
-    <script defer src="scripts/clean_sweep.js"></script>
+    
     <link rel="stylesheet" href="styles/clean_sweep.css">
     <link rel="stylesheet" href="styles/clean_sweep_large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -109,5 +109,8 @@
         </div>
     </footer>
     
+    <script defer src="scripts/clean_sweep.js"></script>
+    <script defer src="scripts/navigation.js"></script>
+
 </body>
 </html>
