--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -7,7 +7,7 @@
     <meta name="title" content="Clean Sweep | Pricing & Services">
     <meta name="Description" content="Clean Sweep pricing and services page for all your household needs">
     <title>Clean Sweep | A Home Cleaning Service</title>
-    <script defer src="scripts/clean_sweep.js"></script>
+    
     <link rel="stylesheet" href="styles/clean_sweep.css">
     <link rel="stylesheet" href="styles/clean_sweep_large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -76,7 +76,8 @@
             <a href="instagram.com" aria-label="Instagram"><img src="images/instagram-icon.webp" alt="Instagram Icon"></a>
         </div>
     </footer>
-    <script src="clean_sweep.js" defer></script>
+    <script defer src="scripts/clean_sweep.js"></script>
+    <script defer src="scripts/navigation.js"></script>
 
 </body>
 </html>
