--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -62,7 +62,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="pricing_services.html">Services</a></li>
+                <li><a href="pricing_services.html" class="active">Services</a></li>
                 <li><a href="diy_tips.html">Blog</a></li>
             </ul>
         </nav>
