--- a/final_project/contact_confirmation.html
+++ b/final_project/contact_confirmation.html
@@ -63,7 +63,7 @@
         <nav class="nav_menu_items">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about_us.html">About Us</a></li>
+                <li><a href="about_us.html" class="active">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="pricing_services.html">Services</a></li>
                 <li><a href="diy_tips.html">Blog</a></li>
