--- a/final_project/diy_tips.html
+++ b/final_project/diy_tips.html
@@ -81,7 +81,7 @@
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="pricing_services.html">Services</a></li>
-                <li><a href="diy_tips.html">Blog</a></li>
+                <li><a href="diy_tips.html" class="active">Blog</a></li>
             </ul>
         </nav>
         <section>
