pricing and services finished for now

--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -42,19 +42,24 @@
             </ul>
         </nav>
     </header>
-    <main id="services_main">
-        
-        <section id="pricing_list" class="pricing">
-        <h2>Our Services</h2>
-        <ul></ul> 
+    <main>
+        <section id="services_main">
+            <div>
+                <h1>Pricing & Services</h1>
+                <p>Discover our affordable cleaning services tailored to your needs. Get a personalized quote today!</p>
+            </div>
         </section>
+        <div class="services-columns">
+            <section id="pricing_list" class="pricing">
+                <h2>Our Services</h2>
+                <ul></ul> 
+            </section>
 
-
-        <section class="calculator">
-            <h2>Get a Quote</h2>
-            <!-- Quote form will be injected here by JavaScript -->
-        </section>
-
+            <section class="calculator">
+                <h2>Get a Quote</h2>
+                <!-- Quote form will be injected here by JavaScript -->
+            </section>
+        </div>
     </main>
 
 
