added call to action form on all pages

--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -50,8 +50,10 @@
         </div>
         </section>
         <form action="contact_confirmation.html" method="POST">
-            <h1>Contact Us</h1>
-            <p>If you have any questions or would like to learn more about our services, please fill out the form below:</p>
+            <div class="contact-banner">
+                <h1>Contact Us</h1>
+                <p>If you have any questions or would like to learn more about our services, please fill out the form below</p>
+            </div>
             <section class="join-form">
                 <form method="get" action="contact_confirmation.html">
                     <!-- First Name -->
