--- a/final_project/diy_tips.html
+++ b/final_project/diy_tips.html
@@ -72,6 +72,39 @@
                 <!-- Blog posts will be dynamically inserted here -->
             </div>
         </section>
+        <form action="contact_confirmation.html" method="POST">
+            <div class="contact-banner">
+                <h1>Contact Us</h1>
+                <p>If you have any questions or would like to learn more about our services, please fill out the form below</p>
+            </div>
+            <section class="join-form">
+                <form method="get" action="contact_confirmation.html">
+                    <!-- First Name -->
+                    <label>
+                        First Name:
+                        <input type="text" name="firstName" title="Applicant First Name" autocomplete="given-name" required>
+                    </label>
+                    <!-- Last Name -->
+                <label>
+                    Last Name:
+                    <input type="text" name="lastName" title="Applicant Last Name" autocomplete="family-name" required>
+                </label>
+                <!-- Email -->
+                <label>
+                    Email:
+                    <input type="email" name="email" title="Email Address" autocomplete="email" required 
+                    placeholder="example@domain.com">
+                </label>
+                <!-- Mobile Phone -->
+                <label>
+                    Mobile Phone:
+                    <input type="tel" name="mobile" title="Mobile Phone Number" autocomplete="tel" required>
+                </label>
+                <!-- Submit Button -->
+                <button type="submit">Talk to your Cleaning Falmily</button>
+            </form>
+            </section>
+        </form>
     </main>
     
     <footer>
