footer date with date.js

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -99,7 +99,7 @@
             </ul>
         </nav>
         <section>
-        <p>&copy; 2024 Clean Sweep. All rights reserved.</p>
+        <p><p id="footerDate"></p>&copy; Clean Sweep. All rights reserved.</p>
         <p>Designed by Bryton Palmer</p>
         </section>
         <div class="social_media_links">
