--- a/final_project/diy_tips.html
+++ b/final_project/diy_tips.html
@@ -46,7 +46,7 @@
     
     <main id="blog_main">
         <section class="intro">
-            <h2>Community Tips & Success Stories</h2>
+            <h1>Community Tips & Success Stories</h1>
             <p>Share what works for you—cleaning hacks, favorite products, routines, or anything that helps make life easier.</p>
         </section>
 
@@ -118,7 +118,7 @@
             </ul>
         </nav>
         <section>
-        <p>&copy; 2024 Clean Sweep. All rights reserved.</p>
+        <p><p id="footerDate"></p>&copy; Clean Sweep. All rights reserved.</p>
         <p>Designed by Bryton Palmer</p>
         </section>
         <div class="social_media_links">
