--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -107,7 +107,7 @@
             </ul>
         </nav>
         <section>
-        <p>&copy; 2024 Clean Sweep. All rights reserved.</p>
+        <p><p id="footerDate"></p>&copy; Clean Sweep. All rights reserved.</p>
         <p>Designed by Bryton Palmer</p>
         </section>
         <div class="social_media_links">
@@ -118,6 +118,7 @@
     </footer>
     <script defer src="scripts/clean_sweep.js"></script>
     <script defer src="scripts/navigation.js"></script>
+    <script defer src="scripts/date.js"></script>
 
 </body>
 </html>
