fixed form issues

--- a/final_project/about_us.html
+++ b/final_project/about_us.html
@@ -85,13 +85,12 @@
                 <cite>- Emily R.</cite>
             </div>
         </section>
-        <form action="contact_confirmation.html" method="POST">
+        <form action="contact_confirmation.html" method="get">
             <div class="contact-banner">
                 <h1>Contact Us</h1>
                 <p>If you have any questions or would like to learn more about our services, please fill out the form below</p>
             </div>
             <section class="join-form">
-                <form method="get" action="contact_confirmation.html">
                     <!-- First Name -->
                     <label>
                         First Name:
@@ -114,8 +113,7 @@
                     <input type="tel" name="mobile" title="Mobile Phone Number" autocomplete="tel" required>
                 </label>
                 <!-- Submit Button -->
-                <button type="submit">Talk to your Cleaning Falmily</button>
-            </form>
+                <button type="submit">Talk to your Cleaning Family</button>
             </section>
         </form>
         </main>
