--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -49,13 +49,12 @@
         <div class="gallery_grid">
         </div>
         </section>
-        <form action="contact_confirmation.html" method="POST">
+        <form action="contact_confirmation.html" method="get">
             <div class="contact-banner">
                 <h1>Contact Us</h1>
                 <p>If you have any questions or would like to learn more about our services, please fill out the form below</p>
             </div>
             <section class="join-form">
-                <form method="get" action="contact_confirmation.html">
                     <!-- First Name -->
                     <label>
                         First Name:
@@ -79,7 +78,6 @@
                 </label>
                 <!-- Submit Button -->
                 <button type="submit">Talk to your Cleaning Falmily</button>
-            </form>
             </section>
         </form>
 
