--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -60,13 +60,12 @@
                 <!-- Quote form will be injected here by JavaScript -->
             </section>
         </div>
-        <form action="contact_confirmation.html" method="POST">
+        <form action="contact_confirmation.html" method="get">
             <div class="contact-banner">
                 <h1>Contact Us</h1>
                 <p>If you have any questions or would like to learn more about our services, please fill out the form below</p>
             </div>
             <section class="join-form">
-                <form method="get" action="contact_confirmation.html">
                     <!-- First Name -->
                     <label>
                         First Name:
@@ -90,12 +89,9 @@
                 </label>
                 <!-- Submit Button -->
                 <button type="submit">Talk to your Cleaning Falmily</button>
-            </form>
             </section>
         </form>
     </main>
-
-
     <footer>
         <nav class="nav_menu_items">
             <ul>
