--- a/final_project/diy_tips.html
+++ b/final_project/diy_tips.html
@@ -72,13 +72,12 @@
                 <!-- Blog posts will be dynamically inserted here -->
             </div>
         </section>
-        <form action="contact_confirmation.html" method="POST">
+        <form action="contact_confirmation.html" method="get">
             <div class="contact-banner">
                 <h1>Contact Us</h1>
                 <p>If you have any questions or would like to learn more about our services, please fill out the form below</p>
             </div>
             <section class="join-form">
-                <form method="get" action="contact_confirmation.html">
                     <!-- First Name -->
                     <label>
                         First Name:
@@ -102,7 +101,6 @@
                 </label>
                 <!-- Submit Button -->
                 <button type="submit">Talk to your Cleaning Falmily</button>
-            </form>
             </section>
         </form>
     </main>
