footer semantics fixed

--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -94,7 +94,10 @@
             </ul>
         </nav>
         <section>
-        <p><p id="footerDate"></p>&copy; Clean Sweep. All rights reserved.</p>
+        <p>
+            <span id="footerDate"></span><br>
+            &copy; Clean Sweep. All rights reserved.
+        </p>
         <p>Designed by Bryton Palmer</p>
         </section>
         <div class="social_media_links">
@@ -107,5 +110,6 @@
     <script defer src="scripts/clean_sweep.js"></script>
     <script defer src="scripts/gallery.js"></script>
     <script defer src="scripts/navigation.js"></script>
+    <script defer src="scripts/date.js"></script>
 </body>
 </html>
