--- a/final_project/contact_confirmation.html
+++ b/final_project/contact_confirmation.html
@@ -70,7 +70,10 @@
             </ul>
         </nav>
         <section>
-        <p><p id="footerDate"></p>&copy; Clean Sweep. All rights reserved.</p>
+        <p>
+            <span id="footerDate"></span><br>
+            &copy; Clean Sweep. All rights reserved.
+        </p>
         <p>Designed by Bryton Palmer</p>
         </section>
         <div class="social_media_links">
@@ -81,6 +84,7 @@
     </footer>
     <script defer src="scripts/clean_sweep.js"></script>
     <script defer src="scripts/navigation.js"></script>
+    <script defer src="scripts/date.js"></script>
 
   
 
