--- a/final_project/diy_tips.html
+++ b/final_project/diy_tips.html
@@ -116,7 +116,10 @@
             </ul>
         </nav>
         <section>
-        <p><p id="footerDate"></p>&copy; Clean Sweep. All rights reserved.</p>
+        <p>
+            <span id="footerDate"></span><br>
+            &copy; Clean Sweep. All rights reserved.
+        </p>
         <p>Designed by Bryton Palmer</p>
         </section>
         <div class="social_media_links">
@@ -128,6 +131,7 @@
     
     <script defer src="scripts/clean_sweep.js"></script>
     <script defer src="scripts/navigation.js"></script>
+    <script defer src="scripts/date.js"></script>
 
 </body>
 </html>
