--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -103,7 +103,10 @@
             </ul>
         </nav>
         <section>
-        <p><p id="footerDate"></p>&copy; Clean Sweep. All rights reserved.</p>
+        <p>
+            <span id="footerDate"></span><br>
+            &copy; Clean Sweep. All rights reserved.
+        </p>
         <p>Designed by Bryton Palmer</p>
         </section>
         <div class="social_media_links">
