--- a/final_project/diy_tips.html
+++ b/final_project/diy_tips.html
@@ -132,6 +132,7 @@
     <script defer src="scripts/clean_sweep.js"></script>
     <script defer src="scripts/navigation.js"></script>
     <script defer src="scripts/date.js"></script>
+    <script defer src="scripts/blog.js"></script>
 
 </body>
 </html>
