meta descriptions made unique

--- a/final_project/contact_confirmation.html
+++ b/final_project/contact_confirmation.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Bryton Palmer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Clean Sweep | About us, the team and mission">
-    <meta name="Description" content="Learn more about Clean Sweep, our mission, team, and why we are passionate about providing top-notch cleaning services.">
+    <meta name="Description" content="Contact confirmation page for Clean Sweep home cleaning service. Thank you for reaching out to us!">
     <title>Clean Sweep | A Home Cleaning Service</title>
     <script defer src="scripts/clean_sweep.js"></script>
     <link rel="stylesheet" href="styles/clean_sweep.css">
