--- a/final_project/index.html
+++ b/final_project/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Bryton Palmer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Clean Sweep | A Home Cleaning Service">
-    <meta name="Description" content="Clean Sweep is a Cleaning Service for all your household needs">
+    <meta name="Description" content="Clean Sweep is a Cleaning Service for all your household needs, providing top-notch cleaning solutions to keep your home spotless.">
     <title>Clean Sweep | A Home Cleaning Service</title>
     
     <link rel="stylesheet" href="styles/clean_sweep.css">
