--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Bryton Palmer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Clean Sweep | Pricing & Services">
-    <meta name="Description" content="Clean Sweep pricing and services page for all your household needs">
+    <meta name="Description" content="Discover our affordable cleaning services tailored to your needs. Get a personalized quote today!">
     <title>Clean Sweep | A Home Cleaning Service</title>
     
     <link rel="stylesheet" href="styles/clean_sweep.css">
