--- a/final_project/about_us.html
+++ b/final_project/about_us.html
@@ -70,21 +70,10 @@
                 <img src="images/aboutus.webp" alt="Team members of Clean Sweep">
             </div>
         </section>
-        <section class="testimonials">
+        <section class="review-section" class="testimonials">
             <h2>What Our Clients Say</h2>
-            <div class="testimonial">
-                <p>"Clean Sweep transformed my home! Their attention to detail and friendly service exceeded my expectations. Highly recommend!"</p>
-                <cite>- Sarah L.</cite>
-            </div>
-            <div class="testimonial">
-                <p>"I love that Clean Sweep uses eco-friendly products. My house is spotless, and I feel good about the impact on the environment."</p>
-                <cite>- Mark D.</cite>
-            </div>
-            <div class="testimonial">
-                <p>"The team at Clean Sweep is professional and reliable. They always arrive on time and do an amazing job every time."</p>
-                <cite>- Emily R.</cite>
-            </div>
         </section>
+
         <form action="contact_confirmation.html" method="get">
             <div class="contact-banner">
                 <h1>Contact Us</h1>
@@ -145,6 +134,7 @@
         <script defer src="scripts/clean_sweep.js"></script>
         <script defer src="scripts/navigation.js"></script>
         <script defer src="scripts/date.js"></script>
+        <script defer src="scripts/reviews.js"></script>
         
     </body>
 </html>
