--- a/final_project/contact_confirmation.html
+++ b/final_project/contact_confirmation.html
@@ -7,7 +7,7 @@
     <meta name="title" content="Clean Sweep | About us, the team and mission">
     <meta name="Description" content="Contact confirmation page for Clean Sweep home cleaning service. Thank you for reaching out to us!">
     <title>Clean Sweep | A Home Cleaning Service</title>
-    <script defer src="scripts/clean_sweep.js"></script>
+    
     <link rel="stylesheet" href="styles/clean_sweep.css">
     <link rel="stylesheet" href="styles/clean_sweep_large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -99,5 +99,8 @@
         document.getElementById("timestamp").textContent = params.get("timestamp") || "";
         });
     </script>
+    <script defer src="scripts/clean_sweep.js"></script>
+    <script defer src="scripts/navigation.js"></script>
+    <script defer src="scripts/date.js"></script>
 </body>
 </html>
