modal and json api fetch

--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -82,6 +82,14 @@
         </form>
 
     </main>
+    <dialog id="galleryModal">
+        <figure>
+            <img id="modalImg" alt="">
+            <figcaption id="modalCaption"></figcaption>
+        </figure>
+        <button id="closeModal" aria-label="Close modal">✖</button>
+    </dialog>
+
     
     <footer>
         <nav class="nav_menu_items">
