--- a/final_project/about_us.html
+++ b/final_project/about_us.html
@@ -31,7 +31,7 @@
         <button id="hamburger" aria-label="Toggle navigation">
             <span id="hamburger-icon">☰</span>
         </button>
-        <nav class="nav_menu_items">
+        <nav id="mobile-nav" class="nav_menu_items">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html" class="active">About Us</a></li>
