--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -32,7 +32,7 @@
             <button id="hamburger" aria-label="Toggle navigation">
                 <span id="hamburger-icon">☰</span>
             </button>
-        <nav class="nav_menu_items">
+        <nav id="mobile-nav" class="nav_menu_items">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
