--- a/final_project/diy_tips.html
+++ b/final_project/diy_tips.html
@@ -16,13 +16,13 @@
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-    <meta property="og:title" content="Clean Sweep">
-    <meta property="og:description" content="Clean Sweep is a Cleaning Service for all your household needs">
-    <meta property="og:url" content="https://cleansweep.com">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:image" content="images/clean_sweep_logo.webp">
+    <meta property="og:title" content="Clean Sweep | Professional Home Cleaning Services That Transform Your Space">
+    <meta property="og:description" content="Explore Clean Sweep’s gallery of sparkling kitchens, organized garages, and spotless living rooms. Our eco-friendly, reliable team delivers personalized cleaning services that make every home shine.">
+    <meta property="og:image" content="https://www.yoursite.com/images/clean_sweep_logo.webp">
+    <meta property="og:url" content="https://github.io/brytonpalmer/wdd231/final_project/index.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Clean Sweep">
+
 </head>
 <body>
     <header>
@@ -126,6 +126,7 @@
             <a href="facebook.com" aria-label="Facebook"><img src="images/facebook-icon.webp" alt="Facebook Icon"></a>
             <a href="x.com" aria-label="Twitter"><img src="images/twitter_icon.webp" alt="Twitter Icon"></a>
             <a href="instagram.com" aria-label="Instagram"><img src="images/instagram-icon.webp" alt="Instagram Icon"></a>
+            <a href="https://www.loom.com/share/4675e97625124c468097cde7f3b648cc" aria-label="Loom Video Presentation"><img src="images/loom-icon.webp" alt="Loom Icon"></a>
         </div>
     </footer>
     
