--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -113,6 +113,7 @@
             <a href="facebook.com" aria-label="Facebook"><img src="images/facebook-icon.webp" alt="Facebook Icon"></a>
             <a href="x.com" aria-label="Twitter"><img src="images/twitter_icon.webp" alt="Twitter Icon"></a>
             <a href="instagram.com" aria-label="Instagram"><img src="images/instagram-icon.webp" alt="Instagram Icon"></a>
+            <a href="https://www.loom.com/share/4675e97625124c468097cde7f3b648cc" aria-label="Loom Video Presentation"><img src="images/loom-icon.webp" alt="Loom Icon"></a>
         </div>
     </footer>
     <script defer src="scripts/clean_sweep.js"></script>
